--- a/index.html
+++ b/index.html
@@ -24,8 +24,7 @@
                 <li><a href="#projects">Projects</a></li>
                 <li><a href="#skills">Skills</a></li>
                 <li><a href="#education">Education</a></li>
-            </ul>
-    </nav>
+              </nav>
     </div>
     <div class="content">
         <section id="home">
@@ -46,7 +45,7 @@
             </div>
             <div class='buttons'>
               <a href="#about" class="readme" >Read More</a>
-              <a href="#contact" class="contactme" style="color: #f0f0f0;">Contact Me</a>
+              <a href="https://www.linkedin.com/in/zoya-kaynat-387a16258" class="contactme" target="_blank" style="color: #f0f0f0;">Contact Me</a>
             </div>
         </section>
 
@@ -306,6 +305,9 @@
   </div>
 
 </section>
+</div>
+
+</body>
 </body>
 
 <script>
